2007-08-24  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-event.h:
	* clutter/clutter-main.c:
	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	* clutter/glx/clutter-backend-glx.c:
	* clutter/glx/clutter-backend-glx.h:
	* clutter/glx/clutter-event-glx.c:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/glx/clutter-stage-glx.h:
	Add initial support for stage state events.
	Fix fullscreening for an already mapped stage. 

	* tests/test-events.c:
	Print out info from the above. Blue button now toggles 
	fullscreen.

	* clutter/clutter-effect.c:
	* clutter/clutter-effect.h:
	Add a setting for templates to ref or clone underlying 
	timelines. (As to improve sync issues like those in foofone)

	* tests/test-timeline.c:
	Also add completed signals.	

	* clutter/cogl/gles/cogl.c: (cogl_texture_image_2d):
	* configure.ac:
	Forward port from stable branch. RGB Image fixes gles
	and check for lower case libgles_cm.


2007-08-24  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-actor.c:
	(_clutter_actor_apply_modelview_transform):
	
	Fixed rotation around x axis (bug 486).
	
2007-08-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-private.h:
	* clutter/clutter-event.c: Revert the event queue ordering
	commit.

	* clutter/eglx/clutter-event-egl.c:
	* clutter/glx/clutter-event-glx.c:
	* clutter/sdl/clutter-event-sdl.c: Update backends.

2007-08-22  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-behaviour-rotate.c:
	* clutter/clutter-behaviour-ellipse.c:

	Fixed CCW rotation in rotate behaviour (bug 483); fixed overall
	path length calculation for angles > 360 in rotate and ellipse.

2007-08-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c (clutter_threads_dispatch_free): Remove
	the main threads locking calls: the main loop might remove the
	source while dispatching it, so whether or not we are already
	holding the lock is unpredictable for the library. Leave a comment